--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.3.2",
     "core-js": "^3.8.3",
+    "less-loader": "^5.0.0",
+    "lodash": "^4.17.21",
+    "path": "^0.12.7",
+    "vant": "^2.12.53",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
   },
@@ -26,7 +31,6 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
     "less": "^4.0.0",
-    "less-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.14"
   }
 }
